RF05 e RF03 finalizados

--- a/instituicao/style.css
+++ b/instituicao/style.css
@@ -1,195 +1,200 @@
-*{
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box; 
- }
-
- .bg{
-   position: fixed;
-   z-index: 1;
-   width: 100vw;
-   height: 100vh;
-   display: none;
-   flex-direction: column;
-   align-items: center;
-   background-blend-mode: darken;
-   background-color: rgba(0, 0, 0, 0.658);
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
- body {
-   height: 100vh; 
-   font-family: 'Poppins', sans-serif;
-   width: 100vw;
-   display: flex;
-   flex-direction: column; 
-   justify-content: center; 
-   align-items: center;
-}
-.container h1{
-   font-size: 70px;
-   display: flex;  
-   flex-direction: column; 
-   align-items: center;
-   color: #05204A;
-   font-weight: 700;
-  
- }
-
-.email_institucional{
-   background-color: #E3E3E3;
-   border-radius: 10px;
-   border-bottom: 1px solid #05204A;
-   padding: 15px
+.bg {
+    position: fixed;
+    z-index: 1;
+    width: 100vw;
+    height: 100vh;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    background-blend-mode: darken;
+    background-color: rgba(0, 0, 0, 0.658);
 }
 
-.nome_da_instituicao{
-   background-color: #E3E3E3;
-   border-radius: 10px;
-   border-bottom: 1px solid #05204A;
-   padding: 15px
+body {
+    height: 100vh;
+    font-family: 'Poppins', sans-serif;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
-.cnpj{
-   background-color: #E3E3E3;
-   border-radius: 10px;
-   border-bottom: 1px solid #05204A;
-   padding: 15px
+.container h1 {
+    font-size: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #05204A;
+    font-weight: 700;
 }
 
-.telefone{
-   background-color: #E3E3E3;
-   border-radius: 10px;
-   border-bottom: 1px solid #05204A;
-   padding: 15px
+.email_institucional {
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
 }
 
- .senha{
-   background-color: #E3E3E3;
-   border-radius: 10px;
-   border-bottom: 1px solid #05204A;
-   padding: 15px
+.nome_da_instituicao {
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
 }
 
-.senha-label{
-   background-color: #E3E3E3;
-   border-radius: 10px;
-   padding: 15px
+.cnpj {
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
 }
 
- button{
-    padding: 10px;   
+.telefone {
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
+}
+
+.senha {
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
+}
+
+.senha-label {
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    padding: 15px
+}
+
+button {
+    padding: 10px;
     font-weight: 700;
     border: 5px solid;
- }
-
-.button{
-   display: flex;
-   text-decoration: none;
-
- }
-
-
-.button a{
-   text-decoration: none;
-   color: white;
-   
 }
 
-#primeiro_botao{
-   margin-top: 2vh;
-   width: 100%;
+.button {
+    display: flex;
+    text-decoration: none;
+}
+
+.button a {
+    text-decoration: none;
+    color: white;
+}
+
+#primeiro_botao {
+    margin-top: 2vh;
+    width: 100%;
     background-color: rgba(240, 248, 255, 0);
     color: white;
     background-color: #0664B7;
     border-radius: 30px;
     padding: 15px;
 }
- #segundo_botao{
-   margin-top: 2vh;
+
+#segundo_botao {
+    margin-top: 2vh;
     width: 100%;
     background-color: rgba(240, 248, 255, 0);
     color: white;
     background-color: #0664B7;
     border-radius: 30px;
     padding: 15px
- }
+}
 
-#terceiro_botao{
-   margin-top: 2vh;
-   width: 100%;
-   background-color: rgba(240, 248, 255, 0);
-   color: white;
-   background-color: #A71E34;
-   border-radius: 30px;
-   padding: 15px
+#terceiro_botao {
+    margin-top: 2vh;
+    width: 100%;
+    background-color: rgba(240, 248, 255, 0);
+    color: white;
+    background-color: #A71E34;
+    border-radius: 30px;
+    padding: 15px
 }
 
 .modal {
-   top: 0;
-   right: 0;
-   bottom: 0;
-   left: 0;
-   width: 50vw;
-   height: 60vh;
-   background-color: rgb(255, 255, 255);
-   display: none;
-   align-items: center;
-   flex-direction: column;
-   text-align: center;
-   justify-content: space-around;
-   font-family: 'Poppins', sans-serif;
-   border-radius: 20px;
-   padding: 15px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 50vw;
+    height: 60vh;
+    background-color: rgb(255, 255, 255);
+    display: none;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-around;
+    font-family: 'Poppins', sans-serif;
+    border-radius: 20px;
+    padding: 15px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
 }
 
-.modal h1{
-   font-size: 40px;
-   font-weight: 900;
-   text-align: center;
-   color: #05204A;
+.modal h1 {
+    font-size: 40px;
+    font-weight: 900;
+    text-align: center;
+    color: #05204A;
 }
 
-.modal h2{
-   margin: 2% 0 2% 0;
-   font-size: 30px;
-   font-weight: 700;
-   text-align: center;
-   color: #A71E34;
+.modal h2 {
+    margin: 2% 0 2% 0;
+    font-size: 30px;
+    font-weight: 700;
+    text-align: center;
+    color: #A71E34;
 }
 
-.modal label{
-   font-size: 30px;
-   font-weight:400;
-   color: #05204A;
+.modal label {
+    font-size: 30px;
+    font-weight: 400;
+    color: #05204A;
 }
 
-.modal input{
-   width: 45vw;
+.modal input {
+    width: 45vw;
 }
 
-.buttons{
-   display: flex;
-   align-items: center;
-   flex-direction: row;
-   text-align: center;
-   justify-content: center;
+.buttons {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
 }
 
-#primeiro_botao_modal{
-   margin-top: 2vh;
-     width: 100%;
-     background-color: rgba(240, 248, 255, 0);
-     color: white;
-     font-weight: 700;
-     border-radius: 30px;
-     border: none;
-     padding: 15px;
-     background-color: #C2C2C2;
-     margin-right: 5%;
-   }
- 
- #segundo_botao_modal{
-   margin-top: 2vh;
+#primeiro_botao_modal {
+    margin-top: 2vh;
+    width: 100%;
+    background-color: rgba(240, 248, 255, 0);
+    color: white;
+    font-weight: 700;
+    border-radius: 30px;
+    border: none;
+    padding: 15px;
+    background-color: #C2C2C2;
+    margin-right: 5%;
+}
+
+#segundo_botao_modal {
+    margin-top: 2vh;
     width: 100%;
     background-color: rgba(240, 248, 255, 0);
     color: white;
@@ -198,5 +203,4 @@
     font-weight: 700;
     border: none;
     padding: 15px
- }
-
+}
