--- a/instituicao/perfil/editar/style.css
+++ b/instituicao/perfil/editar/style.css
@@ -1,136 +1,139 @@
-*{
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box; 
- }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+.container h1 {
+    font-size: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #05204A;
+    font-family: 'Poppins', sans-serif;
+}
 
-.container h1{
-   font-size: 70px;
-   display: flex;  
-   flex-direction: column; 
-   align-items: center;
-   color: #05204A;
-   font-family: 'Poppins', sans-serif;
- }
-
- body {
+body {
     width: 100vw;
     height: 100vh;
-   display: flex;
-   flex-direction: column; 
-   justify-content: center; 
-   background-position: center center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-position: center center;
 }
 
-.email_institucional{
-   background-color: #E3E3E3;
-   border-radius: 10px;
-   border-bottom: 1px solid #05204A;
-   padding: 15px
+.email_institucional {
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
 }
 
-.nome_da_instituicao{
-   background-color: #E3E3E3;
-   border-radius: 10px;
-   border-bottom: 1px solid #05204A;
-   padding: 15px
+.nome_da_instituicao {
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
 }
 
-.cnpj{
-   background-color: #E3E3E3;
-   border-radius: 10px;
-   border-bottom: 1px solid #05204A;
-   padding: 15px
+.cnpj {
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
 }
 
-.telefone{
-   background-color: #E3E3E3;
-   border-radius: 10px;
-   border-bottom: 1px solid #05204A;
-   padding: 15px
+.telefone {
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
 }
 
- .senha{
-   background-color: #E3E3E3;
-   border-radius: 10px;
-   border-bottom: 1px solid #05204A;
-   padding: 15px
+.senha {
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
 }
 
- button{
+button {
     padding: 10px;
     border: 5px solid;
     font-family: 'Poppins', sans-serif;
- }
-
- ::placeholder {
-   font-family: 'Hind', sans-serif;
 }
 
-  #primeiro_botao{
-   margin-top: 2vh;
-     width:100%;
-     background-color: rgba(240, 248, 255, 0);
-     color: white;
-     background-color: #C2C2C2;
-     border-radius: 30px;
-     padding: 15px
-  }
+ ::placeholder {
+    font-family: 'Hind', sans-serif;
+}
 
-  .buttons{
-     display: flex;
-     flex-direction: row-reverse;
-  }
- 
- #segundo_botao{
-   margin-top: 2vh;
-    width:100%;
+#primeiro_botao {
+    margin-top: 2vh;
+    width: 100%;
+    background-color: rgba(240, 248, 255, 0);
+    color: white;
+    background-color: #C2C2C2;
+    border-radius: 30px;
+    padding: 15px
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    text-decoration: none;
+    color: white;
+}
+
+#segundo_botao {
+    margin-top: 2vh;
+    width: 100%;
     background-color: rgba(240, 248, 255, 0);
     color: white;
     background-color: #044177;
     border-radius: 30px;
     padding: 15px
- }
- 
- #icon input {
-   padding-right: 50px;
- }
- 
-#icon {
-   position: relative;
- }
- 
-#icon i {
-   position: absolute;
-   right: 1%;
-   top: 45%;
-   padding: 9px 8px;
-   color: #808080;
-   transition: 0.3s;
- }
- 
-#icon.inputIconBg i {
-   background-color: #aaa;
-   padding: 9px 4px;
-   border-radius: 4px 0 0 4px;
- }
-
- @media (max-width: 1200px) {
-
-   
-   .container{
-      padding: 50px; 
-      
-    }
-   .container h1{
-      text-align: center;
-      font-size: clamp(1rem, 10vw, 4.25rem); 
-      
-   }
-
-   form div{
-      max-width: 10px;
-   }
 }
- 
+
+#icon input {
+    padding-right: 50px;
+}
+
+#icon {
+    position: relative;
+}
+
+#icon i {
+    position: absolute;
+    right: 1%;
+    top: 45%;
+    padding: 9px 8px;
+    color: #808080;
+    transition: 0.3s;
+}
+
+#icon.inputIconBg i {
+    background-color: #aaa;
+    padding: 9px 4px;
+    border-radius: 4px 0 0 4px;
+}
+
+@media (max-width: 1200px) {
+    .container {
+        padding: 50px;
+    }
+    .container h1 {
+        text-align: center;
+        font-size: clamp(1rem, 10vw, 4.25rem);
+    }
+    form div {
+        max-width: 10px;
+    }
+}
