--- a/instituicao/usuarios/cadastro/style.css
+++ b/instituicao/usuarios/cadastro/style.css
@@ -1,34 +1,59 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    box-sizing: border-box; 
- }
+    box-sizing: border-box;
+}
 
- body{
+body {
     height: 100vh;
     width: 100vw;
- }
+    position: relative;
+}
 
- .container{
-     display: flex;
-     flex-direction: column;
-     align-items: center;
-     padding: 2%;
-     height: 100vh;
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2%;
+    height: 100vh;
     width: 100vw;
- }
+}
+
 #ul::-webkit-scrollbar {
-    width: 12px;               /* width of the entire scrollbar */
-  }
-  
+    width: 12px;
+    /* width of the entire scrollbar */
+}
+
 #ul::-webkit-scrollbar-thumb {
-    background-color: #05204A;    /* color of the scroll thumb */
-    border-radius: 10px;       /* roundness of the scroll thumb */
-    border:none;  /* creates padding around scroll thumb */
-  }
+    background-color: #05204A;
+    /* color of the scroll thumb */
+    border-radius: 10px;
+    /* roundness of the scroll thumb */
+    border: none;
+    /* creates padding around scroll thumb */
+}
 
 .modal {
+    margin-top: auto;
+    width: 100%;
+    height: 50vh;
+    background-color: rgb(255, 255, 255);
     display: none;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: 'Poppins', sans-serif;
+    padding: 2%;
+    border-radius: 20px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
+
+.modal-editar {
     top: 0;
     right: 0;
     bottom: 0;
@@ -45,30 +70,12 @@
     border-radius: 20px;
 }
 
-.modal-editar {
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 50vh;
-  background-color: rgb(255, 255, 255);
-  display: none;
-  align-items: center;
-  flex-direction: column;
-  justify-content: space-between;
-  font-family: 'Poppins', sans-serif;
-  padding: 2%;
-  border-radius: 20px;
-}
-
-
-.modal h1{
+.modal h1 {
     font-weight: 700;
     color: #05204A;
 }
 
-.bg{
+.bg {
     position: fixed;
     z-index: 1;
     width: 100%;
@@ -77,13 +84,14 @@
     background-blend-mode: darken;
     background-color: rgba(0, 0, 0, 0.658);
 }
-img{
+
+img {
     width: 100%;
     margin-bottom: 1%;
     margin-top: 2%;
 }
 
-#ul{
+#ul {
     width: 100%;
     border: 2px solid;
     border-color: #05204A;
@@ -93,16 +101,20 @@ img{
 }
 
 #ul::-webkit-scrollbar {
-    width: 12px;               /* width of the entire scrollbar */
-  }
-  
-#ul::-webkit-scrollbar-thumb {
-    background-color: #05204A;    /* color of the scroll thumb */
-    border-radius: 10px;       /* roundness of the scroll thumb */
-    border:none;  /* creates padding around scroll thumb */
-  }
+    width: 12px;
+    /* width of the entire scrollbar */
+}
 
-#li{
+#ul::-webkit-scrollbar-thumb {
+    background-color: #05204A;
+    /* color of the scroll thumb */
+    border-radius: 10px;
+    /* roundness of the scroll thumb */
+    border: none;
+    /* creates padding around scroll thumb */
+}
+
+#li {
     border: none;
     display: flex;
     flex-direction: row;
@@ -111,13 +123,13 @@ img{
     padding: 0 5%;
 }
 
-#icone{
+#icone {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.turmas_existentes{
+.turmas_existentes {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -128,7 +140,7 @@ img{
     margin-bottom: 3%;
 }
 
-.turmas_existentes input{
+.turmas_existentes input {
     background-color: #E3E3E3;
     border-radius: 10px;
     border: none;
@@ -138,172 +150,164 @@ img{
 
 #icon {
     position: relative;
-  }
-  
- #icon i {
+}
+
+#icon i {
     position: absolute;
     right: 7%;
     top: 65%;
     padding: 9px 8px;
     color: #808080;
     transition: 0.3s;
-  }
-  
- #icon.inputIconBg i {
+}
+
+#icon.inputIconBg i {
     background-color: #aaa;
     padding: 9px 4px;
     border-radius: 4px 0 0 4px;
-  }
+}
 
-  #li h2{
+#li h2 {
     color: #272727;
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
-  }
+}
 
-  .lab-inp {
+.lab-inp {
     margin-top: 1%;
     margin-bottom: 1%;
 }
 
-.turma{
-      font-size: 20px;
-  }
+.turma {
+    font-size: 20px;
+}
 
-  .nome{
-      font-size: 30px;
-      font-weight: 400;
-  }
+.nome {
+    font-size: 30px;
+    font-weight: 400;
+}
 
-  #primeiro_botao{
+#primeiro_botao {
     margin-top: 2vh;
-      width: 98%;
-      background-color: rgba(240, 248, 255, 0);
-      color: white;
-      font-weight: 700;
-      border-radius: 30px;
-      border: none;
-      padding: 15px;
-      background-color: #C2C2C2;
-      margin-right: 5%;
-   }
-  
-  #segundo_botao{
-    margin-top: 2vh;
-     width: 98%;
-     background-color: rgba(240, 248, 255, 0);
-     color: white;
-     background-color: #044177;
-     border-radius: 30px;
-     font-weight: 700;
-     border: none;
-     padding: 15px
-  }
+    width: 98%;
+    background-color: rgba(240, 248, 255, 0);
+    color: white;
+    font-weight: 700;
+    border-radius: 30px;
+    border: none;
+    padding: 15px;
+    background-color: #C2C2C2;
+    margin-right: 5%;
+}
 
-  #terceiro_botao{
+#segundo_botao {
     margin-top: 2vh;
-     width: 98%;
-     background-color: rgba(240, 248, 255, 0);
-     color: white;
-     background-color: #044177;
-     border-radius: 30px;
-     font-weight: 700;
-     border: none;
-     padding: 15px
-  }
+    width: 98%;
+    background-color: rgba(240, 248, 255, 0);
+    color: white;
+    background-color: #044177;
+    border-radius: 30px;
+    font-weight: 700;
+    border: none;
+    padding: 15px
+}
 
-  .nome_do_usuario{
+#terceiro_botao {
+    margin-top: 2vh;
+    width: 98%;
+    background-color: rgba(240, 248, 255, 0);
+    color: white;
+    background-color: #044177;
+    border-radius: 30px;
+    font-weight: 700;
+    border: none;
+    padding: 15px
+}
+
+.nome_do_usuario {
     background-color: #E3E3E3;
     border-radius: 10px;
     border-bottom: 1px solid #05204A;
     padding: 15px
- }
-  .email_usuario{
+}
+
+.email_usuario {
     background-color: #E3E3E3;
     border-radius: 10px;
     border-bottom: 1px solid #05204A;
     padding: 15px
- }
- 
- .senha{
+}
+
+.senha {
     background-color: #E3E3E3;
     border-radius: 10px;
     border-bottom: 1px solid #05204A;
     padding: 15px
- }
- 
- .tipo-select{
+}
+
+.tipo-select {
     background-color: #E3E3E3;
     border-radius: 10px;
     border-bottom: 1px solid #05204A;
     padding: 15px
- }
- 
- .turma-select{
+}
+
+.turma-select {
     background-color: #E3E3E3;
     border-radius: 10px;
     border-bottom: 1px solid #05204A;
     padding: 15px
- }
- 
- .buttons{
+}
+
+.buttons {
     display: flex;
     flex-direction: row-reverse;
- }
-  
-@media (max-width: 830px) {
-    .container{
-       padding: 2%;
-    }
-    .container h1{
-       display: flex;
-       font-size: clamp(0rem, 10vw, 4.3rem);
-       text-align: center;
-    }
+}
 
-    .card_azul h1{
+@media (max-width: 830px) {
+    .container {
+        padding: 2%;
+    }
+    .container h1 {
+        display: flex;
+        font-size: clamp(0rem, 10vw, 4.3rem);
+        text-align: center;
+    }
+    .card_azul h1 {
         font-size: clamp(0rem, 10vw, 2.3rem);
     }
-
-    #li{
-      display: flex;
-      flex-direction: column;
+    #li {
+        display: flex;
+        flex-direction: column;
     }
-
-    .button h2{
-      font-size:clamp(0rem, 10vw, 1.5rem);
+    .button h2 {
+        font-size: clamp(0rem, 10vw, 1.5rem);
     }
-
-    .turma{
-      font-size:clamp(0rem, 10vw, 1.5rem);
-      margin-right: 5%;
+    .turma {
+        font-size: clamp(0rem, 10vw, 1.5rem);
+        margin-right: 5%;
     }
-    #icone{
-      display: flex;
-      flex-direction: row;
+    #icone {
+        display: flex;
+        flex-direction: row;
     }
-
-    .livro{
-      display: none;
+    .livro {
+        display: none;
     }
-
     #icon {
-      position: relative;
+        position: relative;
     }
-    
-   #icon i {
-      position: absolute;
-      right: 7%;
-      top: 65%;
-      padding: 9px 8px;
-      color: #808080;
-      transition: 0.3s;
+    #icon i {
+        position: absolute;
+        right: 7%;
+        top: 65%;
+        padding: 9px 8px;
+        color: #808080;
+        transition: 0.3s;
     }
-    
-   #icon.inputIconBg i {
-      background-color: #aaa;
-      padding: 9px 4px;
-      border-radius: 4px 0 0 4px;
+    #icon.inputIconBg i {
+        background-color: #aaa;
+        padding: 9px 4px;
+        border-radius: 4px 0 0 4px;
     }
- }
-  
+}
