--- a/instituicao/usuarios/vizualizacao/style.css
+++ b/instituicao/usuarios/vizualizacao/style.css
@@ -5,12 +5,12 @@
 }
 
 body {
-    width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     background-position: center center;
+    position: relative;
 }
 
 .space {
@@ -52,13 +52,13 @@ body {
     /* creates padding around scroll thumb */
 }
 
-.modal-excluir input{
-        background-color: #E3E3E3;
-        border-radius: 10px;
-        border-bottom: 1px solid #05204A;
-        padding: 15px
-     
+.modal-excluir input {
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
 }
+
 .usuarios_existentes {
     display: flex;
     flex-direction: column;
@@ -99,6 +99,12 @@ body {
     font-family: 'Poppins', sans-serif;
     border-radius: 20px;
     padding: 15px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
 }
 
 .icone p .modal-excluir h1 {
@@ -335,6 +341,12 @@ h1 {
     font-family: 'Poppins', sans-serif;
     padding: 2%;
     border-radius: 20px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
 }
 
 .lab-inp {
@@ -358,6 +370,12 @@ h1 {
     padding: 2%;
     border-radius: 20px;
     width: 100vw;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
 }
 
 .modal h1 {
