--- a/instituicao/cursos/style.css
+++ b/instituicao/cursos/style.css
@@ -4,10 +4,17 @@
     box-sizing: border-box;
 }
 
+.container-geral{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    
+}
 body {
     height: 100vh;
     width: 100vw;
     position: relative;
+    font-family: 'Poppins', sans-serif;
 }
 
 .container {
@@ -18,6 +25,41 @@ body {
     height: 100vh;
     width: 100vw;
 }
+
+.cursos_existentes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    color: #044177;
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 3%;
+}
+
+.cursos_existentes input {
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border: none;
+    padding: 15px;
+    width: 90%;
+}
+
+.curso-select {
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
+}
+
+
+.lab-inp input{
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
+}
+
 
 #ul::-webkit-scrollbar {
     width: 12px;
@@ -39,7 +81,6 @@ body {
     height: 50vh;
     background-color: rgb(255, 255, 255);
     display: none;
-    align-items: center;
     flex-direction: column;
     justify-content: space-between;
     font-family: 'Poppins', sans-serif;
@@ -50,27 +91,70 @@ body {
     top: 50%;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
 }
 
-.modal-editar {
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 50vh;
-    background-color: rgb(255, 255, 255);
-    display: none;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-between;
-    font-family: 'Poppins', sans-serif;
-    padding: 2%;
+.participantes{
+    margin-top: 2%;
+    display: flex;
+    flex-direction: row;
+     width: 100%;
+     justify-content: space-between;
+     align-items: center;
+     text-align: center;
+}
+
+.ul-1{
+    background-color: #E3E3E3;
+    width: 95%;
     border-radius: 20px;
 }
 
+.ul-2{
+    background-color: #E3E3E3;
+    width: 95%;
+    border-radius: 20px;
+}
+
+
+.modal .lab-inp-participantes input{
+    background-color: #C2C2C2;
+    border-radius: 10px;
+    padding: 15px;
+    width: 90%;
+    position: absolute;
+}
+
+#selected {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+   
+}
+
+.li-user {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#selected::-webkit-scrollbar {
+    width: 12px;
+    /* width of the entire scrollbar */
+}
+
+#selected::-webkit-scrollbar-thumb {
+    background-color: #05204A;
+    /* color of the scroll thumb */
+    border-radius: 10px;
+    /* roundness of the scroll thumb */
+    border: none;
+    /* creates padding around scroll thumb */
+}
+
 .modal h1 {
+    font-size: 70px;
     font-weight: 700;
     color: #05204A;
 }
@@ -127,26 +211,22 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 3%;
 }
 
-.turmas_existentes {
+#novo_curso{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 20vw;
+    height: 20vh;
+    background-color: #F4F4F4;
+    border-radius: 20px;
+    overflow-y: auto;
     color: #044177;
-    font-size: 50px;
-    font-weight: 700;
-    margin-bottom: 3%;
 }
 
-.turmas_existentes input {
-    background-color: #E3E3E3;
-    border-radius: 10px;
-    border: none;
-    padding: 15px;
-    width: 90%;
-}
+#no
 
 #icon {
     position: relative;
@@ -178,7 +258,7 @@ img {
     margin-bottom: 1%;
 }
 
-.turma {
+.curso {
     font-size: 20px;
 }
 
@@ -190,26 +270,27 @@ img {
 #primeiro_botao {
     margin-top: 2vh;
     width: 98%;
+    background-color: #0664B7;
     color: white;
     font-weight: 700;
     border-radius: 30px;
     border: none;
     padding: 15px;
-    background-color: #C2C2C2;
     margin-right: 5%;
 }
 
 #segundo_botao {
-    margin-top: 2vh;
-    width: 98%;
-    background-color: rgba(240, 248, 255, 0);
-    color: white;
-    background-color: #044177;
-    border-radius: 30px;
-    font-weight: 700;
-    border: none;
-    padding: 15px
-}
+        margin-top: 2vh;
+        width: 98%;
+        color: white;
+        font-weight: 700;
+        border-radius: 30px;
+        border: none;
+        padding: 15px;
+        background-color: #C2C2C2;
+        margin-right: 5%;
+    }
+
 
 #terceiro_botao {
     margin-top: 2vh;
@@ -223,44 +304,41 @@ img {
     padding: 15px
 }
 
-.nome_do_usuario {
-    background-color: #E3E3E3;
-    border-radius: 10px;
-    border-bottom: 1px solid #05204A;
-    padding: 15px
-}
-
-.email_usuario {
-    background-color: #E3E3E3;
-    border-radius: 10px;
-    border-bottom: 1px solid #05204A;
-    padding: 15px
-}
-
-.senha {
-    background-color: #E3E3E3;
-    border-radius: 10px;
-    border-bottom: 1px solid #05204A;
-    padding: 15px
-}
-
-.tipo-select {
-    background-color: #E3E3E3;
-    border-radius: 10px;
-    border-bottom: 1px solid #05204A;
-    padding: 15px
-}
-
-.turma-select {
-    background-color: #E3E3E3;
-    border-radius: 10px;
-    border-bottom: 1px solid #05204A;
-    padding: 15px
-}
 
 .buttons {
     display: flex;
     flex-direction: row-reverse;
+}
+
+.buttons-buttons {
+    display: flex;
+    flex-direction: row-reverse;
+    width: 100%;
+}
+
+.modal-selecao {
+    width: 100%;
+    height: 50vh;
+    display: none;
+    background-color: rgb(255, 255, 255);
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: 'Poppins', sans-serif;
+    padding: 2%;
+    border-radius: 20px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+        font-weight: 100;
+}
+
+.modal-selecao h2{
+    color: #05204A;
+    font-weight: 500;
 }
 
 @media (max-width: 830px) {
