--- a/instituicao/perfil/infos_pagamento/style.css
+++ b/instituicao/perfil/infos_pagamento/style.css
@@ -22,40 +22,13 @@ body {
     background-position: center center;
 }
 
-.numero_do_cartao {
+.container input {
     background-color: #E3E3E3;
     border-radius: 10px;
     border-bottom: 1px solid #05204A;
     padding: 15px
 }
 
-.nome_no_cartao {
-    background-color: #E3E3E3;
-    border-radius: 10px;
-    border-bottom: 1px solid #05204A;
-    padding: 15px
-}
-
-.validade {
-    background-color: #E3E3E3;
-    border-radius: 10px;
-    border-bottom: 1px solid #05204A;
-    padding: 15px
-}
-
-.cvv {
-    background-color: #E3E3E3;
-    border-radius: 10px;
-    border-bottom: 1px solid #05204A;
-    padding: 15px
-}
-
-.senha {
-    background-color: #E3E3E3;
-    border-radius: 10px;
-    border-bottom: 1px solid #05204A;
-    padding: 15px
-}
 
 button {
     padding: 10px;
