--- a/instituicao/style.css
+++ b/instituicao/style.css
@@ -169,3 +169,17 @@ button {
     border: none;
     padding: 15px
 }
+
+.erro{
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border: 4px solid #A71E34;
+    padding: 15px;
+}
+
+#p-senha-incorreta {
+    display: none;
+    justify-content: center;
+    margin-top: 16px;
+    color: #A71E34;
+}
