--- a/home/componentes/footer/styles_footer.css
+++ b/home/componentes/footer/styles_footer.css
@@ -13,7 +13,7 @@ body {
 }
 
 footer {
-    height: 230px;
+    padding: 40px;
     width: 100vw;
     background-color: #000025;
     display: flex;
@@ -21,6 +21,7 @@ footer {
     align-items: center;
     justify-content: space-evenly;
     text-align: center;
+    gap: 20px;
 }
 
 .social_medias ul li {
