--- a/home/compra/pagamento/pagamento.css
+++ b/home/compra/pagamento/pagamento.css
@@ -4,9 +4,9 @@ header {
 
 main {
     color: #000;
-    height: 100vh;
     display: flex;
     flex-direction: column;
+    padding: 50px 0;
 }
 
 .titulo_infos_pagamento {
@@ -16,9 +16,9 @@ main {
 
 main h4 {
     margin-left: 20px;
-    margin-top: 40px;
     margin-bottom: 5px;
     font-weight: normal;
+    align-self: initial;
 }
 
 .infos_pagamento {
@@ -118,7 +118,6 @@ form label {
 }
 
 .infos_instituicao {
-    /* background-color: teal; */
     width: 50%;
     padding: 30px;
 }
@@ -144,7 +143,6 @@ form .infos_instituicao .input_instituicao {
     width: 50%;
     height: 100%;
     padding: 30px;
-    /* background-color: tomato; */
     border-left: 1px solid #C2C2C2;
 }
 
@@ -177,7 +175,6 @@ input[type=number] {
     align-items: center;
     justify-content: center;
     padding-top: 30px;
-    /* background-color: aqua; */
     width: 100%;
     border-top: 1px solid #C2C2C2;
 }
@@ -205,7 +202,7 @@ form input[type="submit"] {
 
     main {
         align-items: center;
-        padding: 0 5px 0 5px;
+        padding: 50px 0;
     }
 
     form, .infos_pagamento, main h4 {
