--- a/home/compra/pagamento/pagamento.css
+++ b/home/compra/pagamento/pagamento.css
@@ -172,12 +172,105 @@ input[type=number] {
     width: 100%;
 }
 
+
+.infos_cartao_svg{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+#cartao{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: space-around;
+    background: rgb(51,51,51);
+    background: linear-gradient(312deg, rgba(51,51,51,1) 0%, rgba(115,115,115,1) 100%);
+    padding: 32px;
+    border-radius: 20px;
+    width: 350px;
+    height: 175px;
+    font-family: 'Courier New', Courier, monospace;
+    color: white;
+}
+#cartao input {
+    background: none;
+    width: 100%;
+    border: none;
+    outline: none;
+    user-select: none;
+    color: white;
+}
+#cartao input::placeholder{
+    color: white;
+}
+#cartao-top{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#cartao_tipo{
+    background: none;
+    border: none;
+    outline: none;
+    width: fit-content;
+    font-family: 'Courier New', Courier, monospace;
+    color: white;
+}
+#cartao_tipo:hover{
+    cursor: pointer;
+}
+#cartao_tipo option{
+    background: white;
+    font-family: 'Courier New', Courier, monospace;
+    color: rgb(51,51,51);
+}
+#cartao_validade{
+    letter-spacing: 5px;
+    font-weight: bold;
+    text-align: right;
+    user-select: none;
+}
+#cartao_validade::placeholder{
+    letter-spacing: 5px;
+    font-weight: bold;
+    text-align: right;
+    user-select: none;
+}
+
+#cartao_numero{
+    font-size: 18px;
+    letter-spacing: 5px;
+    width: 100%;
+    user-select: none;
+}
+#cartao_numero::placeholder{
+    font-size: 18px;
+    letter-spacing: 10px;
+    user-select: none;
+}
+
+#cartao_nome{
+    letter-spacing: 5px;
+    font-size: 18px;
+    user-select: none;
+}
+#cartao_nome::placeholder{
+    letter-spacing: 5px;
+    font-size: 18px;
+    user-select: none;
+}
+
+
 .btn_finalizar {
     display: flex;
     align-items: center;
     justify-content: center;
     padding-top: 30px;
-    /* background-color: aqua; */
     width: 100%;
     border-top: 1px solid #C2C2C2;
 }
