--- a/home/style.css
+++ b/home/style.css
@@ -7,7 +7,7 @@
  body{
     width: 100vw;
     height: 100vh;
-    background: url('./img_landing_page/background.svg');
+    background: url('background.svg');
     background-blend-mode: darken;
     background-color: rgba(0, 0, 0, 0.452);
     background-position: center center;
@@ -36,8 +36,18 @@
 
  main h1{
    font-weight: 700;
-   font-size: 100px;
+   font-size: 120px;
    font-family: 'Poppins', sans-serif;
+   animation: go-back 3s;
+}
+
+@keyframes go-back{
+   0% {
+      transform: translateX(-100px);
+  }
+  100% {
+      transform: translateX(0);
+  }
 }
 
  main h2{
@@ -58,6 +68,11 @@
    border-color: #0987F7;
    border-radius: 10px;
    padding: 1% 3%;
+   transition: all 0.5s ease-in-out;
+ }
+
+ main .botao:hover{
+      box-shadow: 0 0 10px 0 #0987F7 inset, 0 0 10px 4px #0987F7;
  }
 
  @media (max-width: 1200px) {
