--- a/instituicao/usuarios/cadastro/style.css
+++ b/instituicao/usuarios/cadastro/style.css
@@ -19,6 +19,18 @@ body {
     width: 100vw;
 }
 
+.ul-turma {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2%;
+    height: 100vh;
+    width: 100vw;
+}
+
+
+
+
 #ul::-webkit-scrollbar {
     width: 12px;
     /* width of the entire scrollbar */
@@ -68,11 +80,68 @@ body {
     font-family: 'Poppins', sans-serif;
     padding: 2%;
     border-radius: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+}
+
+.modal-turma {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50vh;
+    background-color: rgb(255, 255, 255);
+    display: none;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: 'Poppins', sans-serif;
+    padding: 2%;
+    border-radius: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+}
+
+.modal-membros {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50vh;
+    background-color: rgb(255, 255, 255);
+    display: none;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: 'Poppins', sans-serif;
+    padding: 2%;
+    border-radius: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
 
 .modal h1 {
+    font-size: 70px;
     font-weight: 700;
     color: #05204A;
+}
+
+.modal-turma h1 {
+    font-size: 70px;
+    font-weight: 700;
+    color: #05204A;
+    text-align: center;
 }
 
 .bg {
@@ -100,12 +169,37 @@ img {
     overflow-y: auto;
 }
 
+#ul-turma {
+    width: 100%;
+    height: 20vh;
+    border: 2px solid;
+    border-color: #05204A;
+    border-radius: 10px;
+    padding: 2%;
+    overflow-y: auto;
+}
+
+
 #ul::-webkit-scrollbar {
     width: 12px;
     /* width of the entire scrollbar */
 }
 
 #ul::-webkit-scrollbar-thumb {
+    background-color: #05204A;
+    /* color of the scroll thumb */
+    border-radius: 10px;
+    /* roundness of the scroll thumb */
+    border: none;
+    /* creates padding around scroll thumb */
+}
+
+#ul-turma::-webkit-scrollbar {
+    width: 12px;
+    /* width of the entire scrollbar */
+}
+
+#ul-turma::-webkit-scrollbar-thumb {
     background-color: #05204A;
     /* color of the scroll thumb */
     border-radius: 10px;
@@ -154,8 +248,8 @@ img {
 
 #icon i {
     position: absolute;
-    right: 7%;
-    top: 65%;
+    right: 3%;
+    top: 45%;
     padding: 9px 8px;
     color: #808080;
     transition: 0.3s;
@@ -187,6 +281,13 @@ img {
     font-weight: 400;
 }
 
+.lab-inp input{
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
+}
+
 #primeiro_botao {
     margin-top: 2vh;
     width: 98%;
@@ -204,7 +305,7 @@ img {
     width: 98%;
     background-color: rgba(240, 248, 255, 0);
     color: white;
-    background-color: #044177;
+    background-color: #0664B7;
     border-radius: 30px;
     font-weight: 700;
     border: none;
@@ -223,39 +324,20 @@ img {
     padding: 15px
 }
 
-.nome_do_usuario {
-    background-color: #E3E3E3;
-    border-radius: 10px;
-    border-bottom: 1px solid #05204A;
-    padding: 15px
-}
-
-.email_usuario {
-    background-color: #E3E3E3;
-    border-radius: 10px;
-    border-bottom: 1px solid #05204A;
-    padding: 15px
-}
-
-.senha {
-    background-color: #E3E3E3;
-    border-radius: 10px;
-    border-bottom: 1px solid #05204A;
-    padding: 15px
-}
-
 .tipo-select {
     background-color: #E3E3E3;
     border-radius: 10px;
     border-bottom: 1px solid #05204A;
-    padding: 15px
+    padding: 15px;
+    color: #C2C2C2;
 }
 
 .turma-select {
     background-color: #E3E3E3;
     border-radius: 10px;
     border-bottom: 1px solid #05204A;
-    padding: 15px
+    padding: 15px;
+    color: #C2C2C2;
 }
 
 .buttons {
