--- a/instituicao/cursos/style.css
+++ b/instituicao/cursos/style.css
@@ -338,26 +338,6 @@ img {
     width: 100%;
 }
 
-.modal-selecao {
-    width: 100%;
-    height: 50vh;
-    display: none;
-    background-color: rgb(255, 255, 255);
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-between;
-    font-family: 'Poppins', sans-serif;
-    padding: 2%;
-    border-radius: 20px;
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-        font-weight: 100;
-}
-
 .modal-curso {
     width: 40%;
     height: 30vh;
@@ -377,7 +357,7 @@ img {
     font-weight: 100;
 }
 
-.modal-excluir {
+.modal-editar {
     width: 40%;
     height: 30vh;
     display: none;
@@ -386,7 +366,6 @@ img {
     flex-direction: column;
     justify-content: space-between;
     font-family: 'Poppins', sans-serif;
-    padding: 2%;
     border-radius: 20px;
     margin: 0;
     position: absolute;
@@ -397,13 +376,72 @@ img {
     font-weight: 100;
 }
 
-.modal-excluir h1{
-    font-size: 50px;
+
+.modal-excluir {
+    width: 40%;
+    height: 30vh;
+    display: none;
+    background-color: rgb(255, 255, 255);
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: 'Poppins', sans-serif;
+    border-radius: 20px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    font-weight: 100;
 }
 
-.modal-excluir h2{
-    font-size: 20px;
+.modal-excluir h1 {
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+    color: #05204A;
+}
+
+.modal-excluir h2 {
+    margin: 2% 0 2% 0;
+    font-size: 30px;
+    font-weight: 400;
+    text-align: center;
     color: #A71E34;
+}
+
+.modal-excluir label {
+    font-size: 30px;
+    font-weight: 400;
+    color: #05204A;
+}
+
+.modal-excluir input {
+    width: 100%;
+}
+
+
+.buttons {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+}
+
+.formExcluir{
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+        font-family: 'Poppins', sans-serif;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+        font-weight: 100;
+    
 }
 
 .modal-curso h1{
