--- a/instituicao/usuarios/cadastro/style.css
+++ b/instituicao/usuarios/cadastro/style.css
@@ -288,7 +288,7 @@ img {
     padding: 15px
 }
 
-#primeiro_botao {
+.primeiro_botao {
     margin-top: 2vh;
     width: 98%;
     color: white;
@@ -300,7 +300,7 @@ img {
     margin-right: 5%;
 }
 
-#segundo_botao {
+.segundo_botao {
     margin-top: 2vh;
     width: 98%;
     background-color: rgba(240, 248, 255, 0);
@@ -312,7 +312,7 @@ img {
     padding: 15px
 }
 
-#terceiro_botao {
+.terceiro_botao {
     margin-top: 2vh;
     width: 98%;
     background-color: rgba(240, 248, 255, 0);
