erro na interface corrigido

--- a/home/compra/planos.css
+++ b/home/compra/planos.css
@@ -4,6 +4,7 @@ header, main {
 
 body {
     overflow-x: hidden;
+    height: 100vh;
 }
 
 main {
@@ -12,7 +13,7 @@ main {
     flex-direction: column;
     list-style: none;
     text-decoration: none;
-    padding: 0px 0 50px;
+    padding: 0px 0 10vh;
     gap: 25px;
 }
 
