--- a/home/compra/pagamento/pagamento.css
+++ b/home/compra/pagamento/pagamento.css
@@ -6,7 +6,7 @@ main {
     color: #000;
     display: flex;
     flex-direction: column;
-    padding: 50px 0;
+    padding: 50px 0 17vh;
 }
 
 .titulo_infos_pagamento {
