--- a/instituicao/usuarios/vizualizacao/style.css
+++ b/instituicao/usuarios/vizualizacao/style.css
@@ -11,12 +11,14 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 2%;
+    width: 100%;
 }
 
 .container-geral {
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 100vw;
 }
 
 .container {
@@ -399,7 +401,7 @@ h1 {
 .buttons {
     display: flex;
     flex-direction: row-reverse;
-    width: 100%;
+    width: 90%;
 }
 
 .terceiro_botao {
