header feito e sua inserção nas páginas iniciada. Problema na tela de planos corrigido

--- a/instituicao/componentes/header/styles_header.css
+++ b/instituicao/componentes/header/styles_header.css
@@ -7,7 +7,6 @@
  body{
     width: 100vw;
     height: 100vh;
-    font-family: 'Roboto';
 }
 
 header{
@@ -26,4 +25,17 @@ header .primeira_parte{
 
 header h1{
     font-size: 24px;
+}
+
+@media (max-width: 500px) {
+
+    header .primeira_parte {
+        display: none;
+    }
+
+    header {
+        padding: 10px;
+        justify-content: end;
+    }
+
 }
