--- a/instituicao/cursos/style.css
+++ b/instituicao/cursos/style.css
@@ -213,6 +213,7 @@ img {
     flex-direction: column;
     align-items: center;
     margin: 3%;
+    width: 20vw;
 }
 
 #novo_curso {
@@ -270,6 +271,7 @@ img {
 .nome {
     font-size: 30px;
     font-weight: 400;
+    text-align: center;
 }
 
 #primeiro_botao {
