--- a/instituicao/perfil/infos_pagamento/editar/style.css
+++ b/instituicao/perfil/infos_pagamento/editar/style.css
@@ -83,7 +83,7 @@ button {
 
 #icon i {
     position: absolute;
-    right: 1%;
+    right: 1vw;
     top: 45%;
     padding: 9px 8px;
     color: #808080;
